# Trustgate

./: README.md  pyproject.toml
.github/: workflows
.github/workflows/: deploy-website.yml
docs/: metadata.json  next.config.ts
docs/app/: layout.tsx  page.tsx
docs/components/: architecture.tsx  features.tsx  footer.tsx  hero.tsx  how-it-works.tsx  navbar.tsx  security-principles.tsx  testimonials.tsx
docs/troubleshooting/: ranger-sentinel-backfill.md
policies/: enterprise_policy.json  local_analysis_policy.json
tests/: test_trustgate.py
trustgate/: analyzers.py  cli.py  engine.py  models.py  policy.py  sandbox.py  utils.py
